logs/opwen-email-server.log
Listing '.'...
Listing './bin'...
Compiling './bin/registerclient.py'...
Compiling './bin/runserver.py'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/.libs_cffi_backend'...
Listing './lib/python3.5/site-packages/Flask-0.12.2.dist-info'...
Listing './lib/python3.5/site-packages/Jinja2-2.10.dist-info'...
Listing './lib/python3.5/site-packages/MarkupSafe-1.0.egg-info'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/Werkzeug-0.14.1.dist-info'...
Listing './lib/python3.5/site-packages/applicationinsights'...
Listing './lib/python3.5/site-packages/applicationinsights/channel'...
Listing './lib/python3.5/site-packages/applicationinsights/channel/contracts'...
Listing './lib/python3.5/site-packages/applicationinsights/exceptions'...
Listing './lib/python3.5/site-packages/applicationinsights/logging'...
Listing './lib/python3.5/site-packages/applicationinsights/requests'...
Listing './lib/python3.5/site-packages/applicationinsights-0.10.0.egg-info'...
Listing './lib/python3.5/site-packages/asn1crypto'...
Listing './lib/python3.5/site-packages/asn1crypto/_perf'...
Listing './lib/python3.5/site-packages/asn1crypto-0.24.0.dist-info'...
Listing './lib/python3.5/site-packages/azure'...
Listing './lib/python3.5/site-packages/azure/common'...
Listing './lib/python3.5/site-packages/azure/storage'...
Listing './lib/python3.5/site-packages/azure/storage/_http'...
Listing './lib/python3.5/site-packages/azure/storage/blob'...
Listing './lib/python3.5/site-packages/azure/storage/file'...
Listing './lib/python3.5/site-packages/azure/storage/queue'...
Listing './lib/python3.5/site-packages/azure/storage/table'...
Listing './lib/python3.5/site-packages/azure_common-1.1.8.dist-info'...
Listing './lib/python3.5/site-packages/azure_nspkg-2.0.0.dist-info'...
Listing './lib/python3.5/site-packages/azure_storage-0.34.0.dist-info'...
Listing './lib/python3.5/site-packages/certifi'...
Listing './lib/python3.5/site-packages/certifi-2017.11.5.dist-info'...
Listing './lib/python3.5/site-packages/cffi'...
Listing './lib/python3.5/site-packages/cffi-1.11.3.dist-info'...
Listing './lib/python3.5/site-packages/chardet'...
Listing './lib/python3.5/site-packages/chardet/cli'...
Listing './lib/python3.5/site-packages/chardet-3.0.4.dist-info'...
Listing './lib/python3.5/site-packages/click'...
Listing './lib/python3.5/site-packages/click-6.7.dist-info'...
Listing './lib/python3.5/site-packages/clickclick'...
Listing './lib/python3.5/site-packages/clickclick-1.2.2.dist-info'...
Listing './lib/python3.5/site-packages/connexion'...
Listing './lib/python3.5/site-packages/connexion/decorators'...
Listing './lib/python3.5/site-packages/connexion/vendor'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui/css'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui/fonts'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui/images'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui/lang'...
Listing './lib/python3.5/site-packages/connexion/vendor/swagger-ui/lib'...
Listing './lib/python3.5/site-packages/connexion-1.1.5.dist-info'...
Listing './lib/python3.5/site-packages/cryptography'...
Listing './lib/python3.5/site-packages/cryptography/hazmat'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/backends/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/bindings/openssl'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/asymmetric'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/ciphers'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/kdf'...
Listing './lib/python3.5/site-packages/cryptography/hazmat/primitives/twofactor'...
Listing './lib/python3.5/site-packages/cryptography/x509'...
Listing './lib/python3.5/site-packages/cryptography-2.1.4.dist-info'...
Listing './lib/python3.5/site-packages/dateutil'...
Listing './lib/python3.5/site-packages/dateutil/tz'...
Listing './lib/python3.5/site-packages/dateutil/zoneinfo'...
Listing './lib/python3.5/site-packages/flask'...
Listing './lib/python3.5/site-packages/flask/ext'...
Listing './lib/python3.5/site-packages/idna'...
Listing './lib/python3.5/site-packages/idna-2.6.dist-info'...
Listing './lib/python3.5/site-packages/itsdangerous-0.24.egg-info'...
Listing './lib/python3.5/site-packages/jinja2'...
Compiling './lib/python3.5/site-packages/jinja2/asyncfilters.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncfilters.py", line 24
    yield item
    ^
SyntaxError: 'yield' inside async function

Compiling './lib/python3.5/site-packages/jinja2/asyncsupport.py'...
***   File "./lib/python3.5/site-packages/jinja2/asyncsupport.py", line 35
    yield event
    ^
SyntaxError: 'yield' inside async function

Listing './lib/python3.5/site-packages/jsonschema'...
Listing './lib/python3.5/site-packages/jsonschema/schemas'...
Listing './lib/python3.5/site-packages/jsonschema/tests'...
Listing './lib/python3.5/site-packages/jsonschema-2.6.0.dist-info'...
Listing './lib/python3.5/site-packages/markupsafe'...
Listing './lib/python3.5/site-packages/opwen_email_server'...
Listing './lib/python3.5/site-packages/opwen_email_server/api'...
Listing './lib/python3.5/site-packages/opwen_email_server/backend'...
Listing './lib/python3.5/site-packages/opwen_email_server/jobs'...
Listing './lib/python3.5/site-packages/opwen_email_server/services'...
Listing './lib/python3.5/site-packages/opwen_email_server/static'...
Listing './lib/python3.5/site-packages/opwen_email_server/utils'...
Listing './lib/python3.5/site-packages/opwen_email_server-0.1.21.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pycparser'...
Listing './lib/python3.5/site-packages/pycparser/ply'...
Listing './lib/python3.5/site-packages/pycparser-2.18.egg-info'...
Listing './lib/python3.5/site-packages/python_dateutil-2.6.1.dist-info'...
Listing './lib/python3.5/site-packages/python_http_client'...
Listing './lib/python3.5/site-packages/python_http_client-3.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyzmail'...
Listing './lib/python3.5/site-packages/pyzmail/tests'...
Listing './lib/python3.5/site-packages/pyzmail36-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/requests'...
Listing './lib/python3.5/site-packages/requests-2.18.4.dist-info'...
Listing './lib/python3.5/site-packages/sendgrid'...
Listing './lib/python3.5/site-packages/sendgrid/helpers'...
Listing './lib/python3.5/site-packages/sendgrid/helpers/inbound'...
Listing './lib/python3.5/site-packages/sendgrid/helpers/mail'...
Listing './lib/python3.5/site-packages/sendgrid-3.6.5.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/strict_rfc3339-0.7.egg-info'...
Listing './lib/python3.5/site-packages/swagger_spec_validator'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas/v1.2'...
Listing './lib/python3.5/site-packages/swagger_spec_validator/schemas/v2.0'...
Listing './lib/python3.5/site-packages/swagger_spec_validator-2.1.0.dist-info'...
Listing './lib/python3.5/site-packages/test'...
Listing './lib/python3.5/site-packages/typing-3.6.1.egg-info'...
Listing './lib/python3.5/site-packages/urllib3'...
Listing './lib/python3.5/site-packages/urllib3/contrib'...
Listing './lib/python3.5/site-packages/urllib3/contrib/_securetransport'...
Listing './lib/python3.5/site-packages/urllib3/packages'...
Listing './lib/python3.5/site-packages/urllib3/packages/backports'...
Listing './lib/python3.5/site-packages/urllib3/packages/ssl_match_hostname'...
Listing './lib/python3.5/site-packages/urllib3/util'...
Listing './lib/python3.5/site-packages/urllib3-1.22.dist-info'...
Listing './lib/python3.5/site-packages/werkzeug'...
Listing './lib/python3.5/site-packages/werkzeug/contrib'...
Listing './lib/python3.5/site-packages/werkzeug/debug'...
Listing './lib/python3.5/site-packages/werkzeug/debug/shared'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/doc'...
Listing './share/doc/pyzmail-1.0.3'...
Listing './share/python-wheels'...
